--- a/PokeAPI/PokeAPI.csproj
+++ b/PokeAPI/PokeAPI.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,14 +44,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DescriptionData.cs" />
+    <Compile Include="GenerationData.cs" />
+    <Compile Include="LanguageData.cs" />
+    <Compile Include="NameData.cs" />
+    <Compile Include="NamedAPIResourceData.cs" />
     <Compile Include="PokeAPIConnection.cs" />
+    <Compile Include="PokedexData.cs" />
+    <Compile Include="PokemonEntryData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VersionData.cs" />
+    <Compile Include="VersionGroupData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Generic\Generic.csproj">
       <Project>{7a78f0b6-2443-4c13-bc44-704677883ba5}</Project>
       <Name>Generic</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
