--- a/PokeAPI/PokeAPI.csproj
+++ b/PokeAPI/PokeAPI.csproj
@@ -44,17 +44,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DescriptionData.cs" />
-    <Compile Include="GenerationData.cs" />
-    <Compile Include="LanguageData.cs" />
-    <Compile Include="NameData.cs" />
-    <Compile Include="NamedAPIResourceData.cs" />
-    <Compile Include="PokeAPIConnection.cs" />
-    <Compile Include="PokedexData.cs" />
-    <Compile Include="PokemonEntryData.cs" />
+    <Compile Include="CommonModels\DescriptionData.cs" />
+    <Compile Include="Games\GenerationData.cs" />
+    <Compile Include="Language.cs" />
+    <Compile Include="Utility\LanguageData.cs" />
+    <Compile Include="ResourceLists\NamedAPIResourceListData.cs" />
+    <Compile Include="CommonModels\NameData.cs" />
+    <Compile Include="CommonModels\NamedAPIResourceData.cs" />
+    <Compile Include="PokeAPIBase.cs" />
+    <Compile Include="Games\PokedexData.cs" />
+    <Compile Include="Games\PokemonEntryData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VersionData.cs" />
-    <Compile Include="VersionGroupData.cs" />
+    <Compile Include="Games\VersionData.cs" />
+    <Compile Include="Games\VersionGroupData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Generic\Generic.csproj">
