--- a/PokeAPI/PokeAPI.csproj
+++ b/PokeAPI/PokeAPI.csproj
@@ -44,11 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Characteristic.cs" />
+    <Compile Include="CommonModels\APIResourceData.cs" />
     <Compile Include="CommonModels\DescriptionData.cs" />
     <Compile Include="Games\GenerationData.cs" />
     <Compile Include="Generation.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Pokedex.cs" />
+    <Compile Include="Pokemon\CharacteristicsData.cs" />
+    <Compile Include="ResourceLists\APIResourceListData.cs" />
     <Compile Include="Utility\LanguageData.cs" />
     <Compile Include="ResourceLists\NamedAPIResourceListData.cs" />
     <Compile Include="CommonModels\NameData.cs" />
