--- a/PokeAPI/PokeAPI.csproj
+++ b/PokeAPI/PokeAPI.csproj
@@ -49,11 +49,14 @@
     <Compile Include="CommonModels\DescriptionData.cs" />
     <Compile Include="EggGroup.cs" />
     <Compile Include="Games\GenerationData.cs" />
+    <Compile Include="Gender.cs" />
     <Compile Include="Generation.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Pokedex.cs" />
     <Compile Include="Pokemon\CharacteristicsData.cs" />
     <Compile Include="Pokemon\EggGroupData.cs" />
+    <Compile Include="Pokemon\GenderData.cs" />
+    <Compile Include="Pokemon\PokemonSpeciesGenderData.cs" />
     <Compile Include="ResourceLists\APIResourceListData.cs" />
     <Compile Include="Utility\LanguageData.cs" />
     <Compile Include="ResourceLists\NamedAPIResourceListData.cs" />
