--- a/PokeAPI/PokeAPI.csproj
+++ b/PokeAPI/PokeAPI.csproj
@@ -54,6 +54,7 @@
     <Compile Include="GrowthRate.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Nature.cs" />
+    <Compile Include="PokeAPIClient.cs" />
     <Compile Include="Pokedex.cs" />
     <Compile Include="Pokemon\CharacteristicsData.cs" />
     <Compile Include="Pokemon\EggGroupData.cs" />
