PokeAPIサンプルツール 言語情報表示

--- a/PokeAPI/PokeAPI.csproj
+++ b/PokeAPI/PokeAPI.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Generation.cs" />
     <Compile Include="GrowthRate.cs" />
     <Compile Include="Language.cs" />
+    <Compile Include="LanguageList.cs" />
     <Compile Include="Nature.cs" />
     <Compile Include="PokeAPIClient.cs" />
     <Compile Include="Pokedex.cs" />
