PokeAPIサンプルツール バージョングループ表示

--- a/PokeAPI/PokeAPI.csproj
+++ b/PokeAPI/PokeAPI.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Games\VersionGroupData.cs" />
     <Compile Include="Version.cs" />
     <Compile Include="VersionGroup.cs" />
+    <Compile Include="VersionGroupList.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Generic\Generic.csproj">
