--- a/PokeAPITool/PokeAPITool.csproj
+++ b/PokeAPITool/PokeAPITool.csproj
@@ -67,6 +67,18 @@
     <Compile Include="PokeAPIToolModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VersionGroupDetailDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VersionGroupDetailDialog.Designer.cs">
+      <DependentUpon>VersionGroupDetailDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VersionGroupListDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VersionGroupListDialog.Designer.cs">
+      <DependentUpon>VersionGroupListDialog.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="LanguageDetailDialog.resx">
       <DependentUpon>LanguageDetailDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -85,6 +97,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="VersionGroupDetailDialog.resx">
+      <DependentUpon>VersionGroupDetailDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VersionGroupListDialog.resx">
+      <DependentUpon>VersionGroupListDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
