--- a/PokeAPITool/PokeAPITool.csproj
+++ b/PokeAPITool/PokeAPITool.csproj
@@ -73,6 +73,12 @@
     <Compile Include="PokeAPIToolModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegionDetailDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegionDetailDialog.Designer.cs">
+      <DependentUpon>RegionDetailDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="VersionDetailDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +118,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RegionDetailDialog.resx">
+      <DependentUpon>RegionDetailDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VersionDetailDialog.resx">
       <DependentUpon>VersionDetailDialog.cs</DependentUpon>
     </EmbeddedResource>
