--- a/PokeAPITool/PokeAPITool.csproj
+++ b/PokeAPITool/PokeAPITool.csproj
@@ -71,6 +71,12 @@
       <DependentUpon>MenuDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="PokeAPIToolModel.cs" />
+    <Compile Include="PokedexDetailDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PokedexDetailDialog.Designer.cs">
+      <DependentUpon>PokedexDetailDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegionDetailDialog.cs">
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MenuDialog.resx">
       <DependentUpon>MenuDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PokedexDetailDialog.resx">
+      <DependentUpon>PokedexDetailDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
