PokeAPI ポケモンデータ取得(途中)

--- a/PokeAPI/PokeAPI.csproj
+++ b/PokeAPI/PokeAPI.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Characteristic.cs" />
     <Compile Include="CommonModels\APIResourceData.cs" />
     <Compile Include="CommonModels\DescriptionData.cs" />
+    <Compile Include="CommonModels\FlavorText.cs" />
     <Compile Include="CommonModels\GenerationGameIndexData.cs" />
     <Compile Include="EggGroup.cs" />
     <Compile Include="Games\GenerationData.cs" />
@@ -61,15 +62,20 @@
     <Compile Include="PokeAPIClient.cs" />
     <Compile Include="Pokedex.cs" />
     <Compile Include="PokedexList.cs" />
+    <Compile Include="PokemonSpeciesData.cs" />
     <Compile Include="Pokemon\CharacteristicsData.cs" />
     <Compile Include="Pokemon\EggGroupData.cs" />
     <Compile Include="Pokemon\GenderData.cs" />
+    <Compile Include="Pokemon\GenusData.cs" />
     <Compile Include="Pokemon\GrowthRateData.cs" />
     <Compile Include="Pokemon\GrowthRateExperienceLevelData.cs" />
     <Compile Include="Pokemon\MoveBattleStylePreferenceData.cs" />
     <Compile Include="Pokemon\NatureData.cs" />
     <Compile Include="Pokemon\NatureStatChangeData.cs" />
+    <Compile Include="Pokemon\PalParkEncounterArea.cs" />
+    <Compile Include="Pokemon\PokemonSpeciesDexEntryData.cs" />
     <Compile Include="Pokemon\PokemonSpeciesGenderData.cs" />
+    <Compile Include="Pokemon\PokemonSpeciesVariety.cs" />
     <Compile Include="Pokemon\TypeData.cs" />
     <Compile Include="Pokemon\TypePokemonData.cs" />
     <Compile Include="Pokemon\TypeRelationsData.cs" />
