--- a/PokeAPITool/PokeAPITool.csproj
+++ b/PokeAPITool/PokeAPITool.csproj
@@ -89,6 +89,18 @@
     <Compile Include="PokedexListDialog.Designer.cs">
       <DependentUpon>PokedexListDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="PokemonSpeciesDetailDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PokemonSpeciesDetailDialog.Designer.cs">
+      <DependentUpon>PokemonSpeciesDetailDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PokemonSpeciesListDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PokemonSpeciesListDialog.Designer.cs">
+      <DependentUpon>PokemonSpeciesListDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegionDetailDialog.cs">
@@ -147,6 +159,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PokedexListDialog.resx">
       <DependentUpon>PokedexListDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PokemonSpeciesDetailDialog.resx">
+      <DependentUpon>PokemonSpeciesDetailDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PokemonSpeciesListDialog.resx">
+      <DependentUpon>PokemonSpeciesListDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
