--- a/PokeAPI/PokeAPI.csproj
+++ b/PokeAPI/PokeAPI.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Language.cs" />
     <Compile Include="LanguageList.cs" />
     <Compile Include="Locations\RegionData.cs" />
+    <Compile Include="NamedAPIResourceList.cs" />
     <Compile Include="Nature.cs" />
     <Compile Include="PokeAPIClient.cs" />
     <Compile Include="Pokedex.cs" />
